AICORE-598: set comprehend enrichment providers max size